--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,10 @@
 # Project specific
-build/
-dist/
 *.app/
 *.dmg
 *.zip
+*.pkg
 scratch.txt
-app/CC-Offline-Package-Generator
+app/downloader-demo
 app/build_env.txt
 
 # Created by .ignore support plugin (hsz.mobi)
